restyle and fix layout bug

--- a/public/global.css
+++ b/public/global.css
@@ -227,7 +227,7 @@ footer {
   margin-top: 70px;
 }
 
-.bass-side .row.one {
+.bass-side .one {
   margin-top: 0;
   margin-right: 0.5rem;
 }
@@ -338,17 +338,16 @@ h2.direction {
   flex-direction: row;
   align-items: center;
   justify-content: left;
-}
-
-.info-row * {
-  padding: 10px;
+  gap: 1rem;
 }
 
 .scales {
   display: flex;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: 0.5rem;
   margin-bottom: 1.5rem;
+  justify-content: left;
+  vertical-align: center;
 }
 
 .scale {
